First crappy implementation of introduce variable